<resources>
    <string name="app_name">Project Phoenix</string>
    <string name="emailHint">Email:</string>
    <string name="passwordHint">Password:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="usernameHint">Username:</string>
    <string name="ageHint">Age:</string>
    <string name="username">Username</string>
    <string name="gamerPoints">GamerPoints</string>
    <string name="games">Games</string>
    <string name="tournaments">Tournaments</string>
    <string name="gameFranchise">GameFranchise</string>
    <string name="gameTitle">GameTitle</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="apply_now">Apply Now</string>
    <string name="become_a_developer">Become a Developer!</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="franchiseHint">Franchise:</string>
    <string name="platformHint">Platform:</string>
    <string name="submit_application">Submit Application</string>
    <string name="add_new_game">Add New Game</string>
    <string name="developer_applications">Developer Applications</string>
    <string name="platform">Platform</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="franchise">Franchise</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="add_game">Add Game</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="title_hint">Title:</string>
    <string name="date_hint">Date:</string>
    <string name="time_hint">Time:</string>
    <string name="max_number_of_players_hint">Max Number of Players:</string>
    <string name="description">Description:</string>
    <string name="_16">16</string>
    <string name="backslash">/</string>
    <string name="_0">0</string>
    <string name="join_tournament">Join Tournament</string>
    <string name="game_title_hint">Game Title:</string>
    <string name="finding_user">Finding user...</string>
    <string name="loser">Loser</string>
    <string name="winner">Winner</string>
</resources>
