<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/gameScreenFragment"
            android:icon="@drawable/ic_game"
            android:title="@string/games" />
        <item
            android:id="@+id/tournamentsFragment"
            android:icon="@drawable/ic_tournament"
            android:title="@string/tournaments" />
    </group>

    <item
        android:id="@+id/listDevAppsFragment"
        android:icon="@drawable/ic_dev_apps"
        android:title="@string/developer_applications"/>

    <item
        android:id="@+id/becomeADev"
        android:title="@string/become_a_developer">
        <menu>
            <item
                android:id="@+id/gameDevApplicationFragment"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/apply_now" />
        </menu>
    </item>


    <item
        android:id="@+id/loginFragment"
        android:title="@string/logout"/>

</menu>