<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/devAppEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/devAppFranchise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/devAppEmail"
            android:text="@string/franchise"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/devAppPlatform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/devAppFranchise"
            android:text="@string/platform"
            android:textSize="18sp" />

        <Button
            android:id="@+id/devAppAcceptBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devAppEmail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/accept" />

        <Button
            android:id="@+id/devAppRejectBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devAppEmail"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/devAppAcceptBT"
            android:text="@string/reject" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>