<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:elevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/tournamentIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:id="@+id/tournamentTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tournamentIV"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tournamentIV"
            android:layout_below="@+id/tournamentTitleTV"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dateTV"
            android:layout_below="@id/tournamentTitleTV"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/time"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>